[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/global/explosions/_base/_BaseExplosion.gd" type="Script" id=1]
[ext_resource path="res://assets/global/sfx_Explosion.wav" type="AudioStream" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.508929, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
lifetime_randomness = 0.99
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 800.0
initial_velocity_random = 0.8
angular_velocity = 1000.0
angular_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 800.0
damping_random = 0.8
scale = 10.0
scale_random = 0.9
color_ramp = SubResource( 2 )

[node name="Explosion" type="Node2D"]
z_index = 5
script = ExtResource( 1 )

[node name="Blast" type="Polygon2D" parent="."]
visible = false
scale = Vector2( 1.05714, 1.05714 )
color = Color( 0.972549, 0.627451, 0.0352941, 1 )

[node name="BlastTween" type="Tween" parent="Blast"]

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 700
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )

[node name="AreaOfEffect" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfEffect"]

[node name="KnockBackDirection" type="RayCast2D" parent="."]
visible = false

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="RemoveParticles" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="RemoveParticles" to="." method="_on_RemoveParticles_timeout"]
